2001-02-04  Fernando Nasser  <fnasser@redhat.com>

	* library/plugins/plugins.tcl: Fix typos and remove "-transient"
	parameter from open command.
	* library/plugins/HOW-TO: New file.  Describes how to add a plug-in
	window to Insight.

2001-02-01  Fernando Nasser  <fnasser@redhat.com>

	* library/images/insight.gif: New splash screen/about graphics.
	* library/images2/insight.gif: New splash screen/about graphics.
	* library/about.tcl: Update copyright, window title and change colors
	to match new splash screen/about images.

2001-02-01  Fernando Nasser  <fnasser@redhat.com>

	* library/gdbtoolbar.itcl (add): New method.  Emulate the style of the
	toolbar iwidget commands.
	(toolbar_show): Old name.
        (show): New name.
	(toolbar_create_button): Old name.
        (create): New name.
	(toolbar_configure_button): Old name.
        (itemconfigure): New name.
        (toolbar_bind_button): Old name.
        (itembind): New name.
        (toolbar_set_button_balloon): Old name.
        (itemballoon): New name.
        (toolbar_add_button): Make private.
        (toolbar_add_label): Ditto.
        (toolbar_add_button_separator): Ditto.
	(toolbar_remove_button): Ditto.
	(tollbar_insert_button): Ditto.
	* library/srcbar.itcl: Adjust to the above syntax.
	* library/plugins/rhabout/rhabout.itcl: Ditto.

2001-02-01  Fernando Nasser  <fnasser@redhat.com>

	* library/gdbmenubar.itcl (constructor): Remove unused code.
	(add): New method.  Emulate the style of the menubar iwidget commands.
	(menubar_show): Old name.
	(show): New name.
	(menubar_menu_exists): Old name.
	(exists): New name.
	(menubar_clear_menu): Old name.
	(clear): New name.
	(menubar_delete_menu): Old name.
        (delete): New name.
	(menubar_new_menu): Make private.  Does not return anything.
	(menubar_add_menu_command): Make private.
	(menubar_add_menu_separator): Ditto.
	(menubar_change_menu_state): Ditto.
	* library/srcbar.itcl: Adjust to the above syntax.
	* library/plugins/plugins.tcl: Ditto.