@@ -1,5 +1,5 @@
-# Source window for GDBtk.
-# Copyright 1997, 1998, 1999 Cygnus Solutions
+# Source window for Insight.
+# Copyright 1997, 1998, 1999, 2001 Red Hat
 #
 # This program is free software; you can redistribute it and/or modify it
 # under the terms of the GNU General Public License (GPL) as published by
@@ -295,7 +295,11 @@ body SrcWin::_name {w {val ""}} {
   if {$val != ""} {
     if {![info exists _files(short,$val)]} {
       if {![info exists _files(full,$val)]} {
-	set full [gdb_find_file $val]
+	if [catch {gdb_find_file $val} full] {
+	  set_status "Cannot find source file \"$val\": $full"
+	  $_statbar.name entryset [lindex [file split $current(filename)] end]
+	  return
+	}
 	if {$full == ""} {
 	  set_status "Cannot find source file \"$val\""
 	  $_statbar.name entryset [lindex [file split $current(filename)] end]
@@ -369,6 +373,8 @@ body SrcWin::fillNameCB {} {
   set allfiles [gdb_listfiles]
   debug "gdb_listfiles returned $allfiles"
   foreach f $allfiles {
+    # FIXME: If you reactivate this code add a catch as gdb_find_file can err
+    # (P.S.: I don't know why this is commented out)
     #set fullname [gdb_find_file $f]
     #set _files(full,$f) $fullname
     #set _files(short,$fullname) $f
